--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <script src="data.js"></script>
 <body onload="onLoad()">
   <button onClick="addItem()">+</button>
-  <input id="count" type="number" value="1" style="width: 4em">x
+  <input id="count" type="number" value="1" style="width: 4em">&#215;
   <select id="part"></select>
   (<input id="note">)
   <div id="content"></div>
