--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <title>No Man's Sky: Shopping List</title>
 <script src="shopping.js"></script>
 <script src="data.js"></script>
+<style>
+  ul { margin: 0; }
+  div.top { margin-top: 15px; }
+</style>
 <body onload="onLoad()">
   <button onClick="addItem()">+</button>
   <input id="count" type="number" value="1" style="width: 4em">&#215;
