--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body onload="onLoad()">
   <button onClick="addItem()">+</button>
   <input id="count" type="number" value="1" style="width: 4em">&#215;
-  <select id="part"></select>
+  <input id="part" list="partlist">
+  <datalist id="partlist"></datalist>
   (<input id="note">)
   <div id="content"></div>
 </body>
