--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<meta http-equiv="Cache-Control" content="no-cache"/>
 <title>No Man's Sky: Shopping List</title>
 <script src="shopping.js"></script>
 <script src="data.js"></script>
