datalist fallback message

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <button onClick="addItem()">+</button>
   <input id="count" type="number" value="1" style="width: 4em">&#215;
   <input id="part" list="partlist">
-  <datalist id="partlist"></datalist>
+  <datalist id="partlist">Your browser doesn't support datalist.</datalist>
   (<input id="note">)
   <div id="content"></div>
 </body>
