--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <meta http-equiv="Cache-Control" content="no-cache"/>
 <title>No Man's Sky: Shopping List</title>
+<link rel="stylesheet" href="awesomplete/awesomplete.css" />
+<script src="awesomplete/awesomplete.js" async></script>
 <script src="shopping.js"></script>
 <script src="data.js"></script>
 <style>
@@ -9,8 +11,7 @@
 <body onload="onLoad()">
   <button onClick="addItem()">+</button>
   <input id="count" type="number" value="1" style="width: 4em">&#215;
-  <input id="part" list="partlist">
-  <datalist id="partlist">Your browser doesn't support datalist.</datalist>
+  <input id="part">
   (<input id="note">)
   <div id="content"></div>
 </body>
