--- a/index.html
+++ b/index.html
@@ -1,13 +1,25 @@
 <meta http-equiv="Cache-Control" content="no-cache"/>
 <title>No Man's Sky: Shopping List</title>
+
 <link rel="stylesheet" href="awesomplete/awesomplete.css" />
 <script src="awesomplete/awesomplete.js" async></script>
 <script src="shopping.js"></script>
 <script src="data.js"></script>
+
 <style>
   ul { margin: 0; }
   div.top { margin-top: 15px; }
+  div.countBox {
+    display: flex;
+    flex-direction: row;
+  }
+  div.countColumn {
+    display: flex;
+    flex-direction: column;
+    margin-right: 5px;
+  }
 </style>
+
 <body onload="onLoad()">
   <button onClick="addItem()">+</button>
   <input id="count" type="number" value="1" style="width: 4em">&#215;
