experiment with title attributes

--- a/index.html
+++ b/index.html
@@ -25,5 +25,6 @@
   <input id="count" type="number" value="1" style="width: 4em">&#215;
   <input id="part">
   (<input id="note">)
+  <span title="extra!">text</span>
   <div id="content"></div>
 </body>
