--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <meta http-equiv="Cache-Control" content="no-cache"/>
 <title>No Man's Sky: Shopping List</title>
 
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-88958049-1', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
 <link rel="stylesheet" href="awesomplete/awesomplete.css" />
 <script src="awesomplete/awesomplete.js" async></script>
 <script src="shopping.js"></script>
